Fri Nov  2 17:52:12 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* object.c (rb_mod_to_s): Module#{to_s,inspect}, when invoked on
	  a refinement, returns a string in the format #<refinement:C@M>,
	  where C is a refined class and M is a module at which the refinemet
	  is defined.
	
	* eval.c (rb_mod_refine): store information on a refinement for the
	  above change.

	* test/ruby/test_refinement.rb: related test.

Fri Nov  2 16:57:52 2012  Shota Fukumori  <sorah@tubusu.net>

	* vm_dump.c (rb_vm_bugreport): Because of many log directories,
	  making directory lists readable.

Fri Nov  2 16:44:00 2012  Kenta Murata  <mrkn@mrkn.jp>

	* vm_dump.c (rb_vm_bugreport): add ~/Library/Logs/DiagnosticReports
	  in the locations list of crash reports.

Fri Nov  2 14:52:52 2012  Masaki Matsushita  <glass.saga@gmail.com>

	* array.c (recursive_equal): performance improvement.
	  [ruby-dev:45412] [Feature #6177]

Fri Nov  2 14:47:53 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* string.c (sym_to_proc, sym_call): A Proc created by Symbol#to_proc
	  should close over the current refinements.
	  [ruby-dev:46345] [Bug #7261]

	* vm_eval.c (rb_call0, rb_search_method_entry,
	  rb_funcall_passing_block_with_refinements): add a new argument
	  `refinements' for the above changes.

	* test/ruby/test_refinement.rb: related test.

Fri Nov  2 08:24:28 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (top_define_method): new method, main.define_method.
	  [ruby-core:45715] [Feature #6609]

	* eval.c (top_include): fix a warning message, main is not a class or
	  module.

Fri Nov  2 04:41:33 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (MakeMakefile#timestamp_file): use ! instead of %, a GNU
	  make special character.

Fri Nov  2 04:40:10 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/test_process.rb (test_execopts_preserve_env_on_exec_failure):
	  use never existing file in the current temporary directory.
